# LLMs_Playing_Chess_Benchmark

./: .gitignore  README.md  pyproject.toml
examples/: 1vs1_game.py  benchmark_for_ollama_model.py  benchmark_for_random_model.py  game_to_gif.py  llm_tournament.py  play_with_LLM.py
gif_games/: gifs.html
notebooks/: results_analysis.ipynb
results/tournaments/tournament_16/: final_standings.csv  match_R1_M1.csv  match_R1_M2.csv  match_R1_M3.csv  match_R2_M1.csv  match_R3_M1.csv  tournament_results.csv
results/tournaments/tournament_17/: final_standings.csv  match_R1_M1.csv  match_R1_M2.csv  match_R1_M3.csv  match_R2_M1.csv  match_R3_M1.csv  tournament_results.csv
results/tournaments/tournament_18/: final_standings.csv  match_R1_M1.csv  match_R1_M2.csv  match_R1_M3.csv  match_R2_M1.csv  match_R3_M1.csv  tournament_results.csv
src/: benchmark.py  main.py
src/core/: evaluate.py  game_manager.py  match.py  player_base.py  tournament.py
src/gui/: board_view.py
src/players/: __init__.py  ollama_player.py  random_move_player.py
