[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-chess-benchmark"

readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-chess",
    "customtkinter",
    "langchain-community",
    "langchain-ollama",
    "langchain",
    "svglib",
    "reportlab",
    "pillow",
    "pandas",
    "tqdm",

]

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}